fix: 로그인 유저 활용 서비스 로직 변경